# emoj-suggestor-genai-template

./: .gitignore  .justfile  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.cache/: .gitkeep
.devcontainer/: .env.example  Dockerfile  devcontainer.json
src/emoji_suggestor/: __init__.py  cli.py  commands.py  const.py  processing.py  types.py
